[package]
name = "simple-rpc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
flate2 = { version = "1", features = ["zlib"] }
lz4_flex = "0.11"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"